# VSFilterSimpleMod

./: CMakeLists.txt  VSFilterMod.sln
src/BaseClasses/: baseclasses.vcxproj
src/basevideofilter/: basevideofilter.vcxproj
src/dsutil/: DSUtil.cpp  DSUtil.h  dsutil.vcxproj  dsutil.vcxproj.filters  stdafx.h
src/libpng/: libpng.vcxproj
src/subpic/: ISubPic.cpp  ISubPic.h  MemSubPic.cpp  MemSubPic.h  subpic.vcxproj  subpic.vcxproj.filters
src/subtitles/: GFN.cpp  RTS.cpp  RTS.h  Rasterizer.cpp  Rasterizer.h  STS.cpp  STS.h  SeparableFilter.h  TextFile.cpp  TextFile.h  stdafx.h  subtitles.vcxproj  subtitles.vcxproj.filters
src/subtitles/libssf/: libssf.vcxproj
src/vsfilter/: StdAfx.h  VSFilter.vcxproj  VSFilter.vcxproj.filters  csriapi.cpp  plugins.cpp
src/zlib/: zlib.vcxproj
